my_component/frontend/src/Node.scss
/* Forked from https://codepen.io/Pestov/pen/BLpgm */
/* This horizontal version (c) https://codepen.io/paulsmirnov/pen/dyyOLwa */
/* See also right to left at https://codepen.io/paulsmirnov/pen/WNNGVbv */
/* See also vertical + fixed wrapping at https://codepen.io/paulsmirnov/pen/LYYZeGM */

$font-family: arial, tahoma;

$transition-time: 0.5s;

$edge-length-before-split: 10px;
$edge-length-after-split: 150px;
$edge-style: 1px solid #ccc;

$edge-hover-color: #94a0b4;

$node-outer-padding: 5px 0 5px $edge-length-after-split;
$node-border-style: 1px solid #ccc;
$node-border-radius: 5px;
$node-inner-padding: 5px 5px;
$node-left-item-width: 20px;
$node-text-color: #333;
$node-font-size: 11px;
$node-width: 100px;

$node-hover-color: #c8e4f8;
$node-hover-text-color: #000;
$node-hover-border-style: 1px solid $edge-hover-color;

$edge-label-margin-x: 10px;
$edge-label-margin-y: 2px;

$child-button-margin: 0px 0px 0px 3px;
$child-button-size: 10px;
$child-button-color: rgba(128, 0, 0, 0.25);
$child-button-hover-color: rgba(128, 0, 0, 1);

// Body
body {
  height: auto;
}

// Scrollbar
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);

  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background-color: darkgrey;

  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

//Tree
* {
  margin: 0;
  padding: 0;
}

button {
  display: block;
  margin: 5px auto;
  padding: 5px;
}

.tree {
  // background-color: aqua;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: row;

  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow-x: auto;
  overflow-y: hidden;
  padding: 10px;

  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;
}

.tree ul {
  padding-left: $edge-length-before-split;
  position: relative;

  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;

  max-height: 1000px;
  // max-width: 5000px;

  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;
}

.tree li {
  text-align: center;
  list-style-type: none;
  position: relative;
  padding: $node-outer-padding;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;
}

/*We will use ::before and ::after to draw the connectors*/

.tree li::before,
.tree li::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 50%;
  border-left: $edge-style;
  width: $edge-length-after-split;
  height: 50%;
}
.tree li::after {
  bottom: auto;
  top: 50%;
  border-top: $edge-style;
}

/*We need to remove left-right connectors from elements without
any siblings*/
.tree li:only-child::after,
.tree li:only-child::before {
  display: none;
}

/*Remove space from the top of single children*/
.tree li:only-child {
  padding-left: 0;
}

/*Remove left connector from first child and
right connector from last child*/
.tree li:first-child::before,
.tree li:last-child::after {
  border: 0 none;
}
/*Adding back the vertical connector to the last nodes*/
.tree li:last-child::before {
  border-bottom: $edge-style;
}

/*Time to add downward connectors from parents*/
.tree ul ul::before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  border-top: $edge-style;
  width: $edge-length-before-split;
  height: 0;
}

// Node
.tree li .node {
  border: $node-border-style;
  text-decoration: none;
  color: $node-text-color;
  font-family: $font-family;
  font-size: $node-font-size;
  display: flex;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
  border-radius: $node-border-radius;
  -webkit-border-radius: $node-border-radius;
  -moz-border-radius: $node-border-radius;
  -ms-border-radius: $node-border-radius;
  -o-border-radius: $node-border-radius;
  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;
}

.tree li .node .node-content-left {
  cursor: pointer;
  width: $node-left-item-width;
  padding: $node-inner-padding;
  margin: 0;
  display: flex;
  align-self: stretch;
  align-items: center;
  justify-content: center;
  border-right: $node-border-style;
  border-radius: $node-border-radius 0px 0px $node-border-radius;
  -webkit-border-radius: $node-border-radius 0px 0px $node-border-radius;
  -moz-border-radius: $node-border-radius 0px 0px $node-border-radius;
  -ms-border-radius: $node-border-radius 0px 0px $node-border-radius;
  -o-border-radius: $node-border-radius 0px 0px $node-border-radius;
}
.tree li .node .node-content-right {
  margin: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-self: stretch;
  align-items: center;
  justify-content: center;
  width: $node-width;
  padding: $node-inner-padding;
  border-radius: 0px $node-border-radius $node-border-radius 0px;
  -webkit-border-radius: 0px $node-border-radius $node-border-radius 0px;
  -moz-border-radius: 0px $node-border-radius $node-border-radius 0px;
  -ms-border-radius: 0px $node-border-radius $node-border-radius 0px;
  -o-border-radius: 0px $node-border-radius $node-border-radius 0px;
}
.tree li .node .node-content-right-item {
  padding: 0;
}

.tree li .node:hover {
  background: $node-hover-color;
  color: $node-hover-text-color;
  border: $node-hover-border-style;
}

// Edge Label
.tree li .edge-content {
  margin: $edge-label-margin-y $edge-label-margin-x;

  text-decoration: none;
  color: $node-text-color;
  font-family: $font-family;
  font-size: $node-font-size;

  position: absolute;
  left: 0;
  bottom: 50%;
  width: $edge-length-after-split - 2 * $edge-label-margin-x;

  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;
}

//Child button
.child-button {
  display: inline-block;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;

  transition: all $transition-time;
  -webkit-transition: all $transition-time;
  -moz-transition: all $transition-time;
  -ms-transition: all $transition-time;
  -o-transition: all $transition-time;

  margin: $child-button-margin;

  border-top: $child-button-size solid transparent;
  border-bottom: $child-button-size solid transparent;
  border-left: $child-button-size solid $child-button-color;
}

.child-button:hover {
  border-left: $child-button-size solid $child-button-hover-color;
  cursor: pointer;
}

